# mmotd

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  README.md  VERSION.H.IN  external_network.cpp  external_network.h  http_request.cpp  http_request.h  http_secure_request.cpp  lastlog.h  main.cpp  mmotd.config  network.cpp  network.h  options.cpp  sysctl-defs.h  system.cpp
app/: CMakeLists.txt
app/include/: cli_app_options_creator.h  color.h  logging.h  main.h
app/src/: cli_app_options_creator.cpp  color.cpp  logging.cpp  main.cpp
apps/mmotd/: CMakeLists.txt
apps/mmotd/include/: cli_app_options_creator.h  main.h
apps/mmotd/src/: cli_app_options_creator.cpp  main.cpp
apps/mmotd_raw/: CMakeLists.txt
apps/mmotd_raw/include/: main.h
apps/mmotd_raw/src/: main.cpp
common/: CMakeLists.txt
common/assertion/include/: assertion.h  exception.h  precondition.h  stack_trace.h  throw.h
common/assertion/src/: assertion.cpp  exception.cpp  stack_trace.cpp  throw.cpp
common/include/: ScopeGuard.h  algorithm.h  app_options.h  app_options_creator.h  big_five_macros.h  chrono-io.h  chrono_io.h  cli_options_parser.h  coloring.h  config_options.h  global_state.h  human_size.h  information.h  information_decls.h  information_definitions.h  information_defs.h  information_objects.h  informations.h  iostream_error.h  logging.h  mac_address.h  network_device.h  output_template.h  output_template_writer.h  platform_error.h  portability.h  posix_error.h  source_location.h  source_location_common.h  special_files.h  string_utils.h  system_command.h  template_column_items.h  tty_template.h  tty_template_data.h  tty_template_io.h  tty_template_string.h  tty_template_substring.h  tty_template_substring_range.h  tty_template_substrings.h  (+3 more)
common/results/include/: output_column.h  output_column_indexes.h  output_common.h  output_frame.h  output_position_index.h  output_row.h  output_row_number_sentinals.h  output_table.h  output_template.h  output_template_printer.h  template_column_items.h  template_string.h  template_substring.h  template_substring_range.h  template_substrings.h
common/results/src/: output_column.cpp  output_column_indexes.cpp  output_frame.cpp  output_position_index.cpp  output_row.cpp  output_row_number_sentinals.cpp  output_table.cpp  output_template.cpp  output_template_printer.cpp  template_column_items.cpp  template_string.cpp  template_substring.cpp  template_substring_range.cpp  template_substrings.cpp
common/src/: ScopeGuard.cpp  app_options.cpp  app_options_creator.cpp  chrono-io.cpp  chrono_io.cpp  cli_options_parser.cpp  coloring.cpp  config_options.cpp  global_state.cpp  human_size.cpp  information.cpp  information_decls.cpp  information_definitions.cpp  information_objects.cpp  informations.cpp  iostream_error.cpp  logging.cpp  mac_address.cpp  network_device.cpp  output_template.cpp  output_template_writer.cpp  platform_error.cpp  posix_error.cpp  source_location.cpp  source_location_common.cpp  special_files.cpp  string_utils.cpp  system_command.cpp  template_column_items.cpp  tty_template.cpp  tty_template_data.cpp  tty_template_io.cpp  tty_template_string.cpp  tty_template_substring.cpp  tty_template_substring_range.cpp  tty_template_substrings.cpp  user_information.cpp  version.cpp
common/test/include/: exception_matcher.h
common/test/src/: exception_matcher.cpp  test_algorithm.cpp  test_assertion.cpp  test_config_options.cpp  test_exception.cpp  test_mac_address.cpp  test_output_template.cpp  test_output_template_writer.cpp  test_position_index.cpp  test_special_files.cpp  test_template_string.cpp
lib/: CMakeLists.txt
lib/include/: app_options.h  app_options_creator.h  boot_time.h  computer_information.h  external_network.h  file_system.h  fortune.h  general.h  hardware_information.h  http_request.h  information_provider.h  lastlog.h  load_average.h  logging.h  mac_address.h  memory.h  network.h  options.h  package_management.h  posix_sysctl_information.h  posix_system_information.h  processes.h  swap.h  sysctl_defs.h  system.h  system_details.h  system_information.h  users_logged_in.h  weather_info.h
lib/include/platform/: boot_time.h  hardware_information.h  hardware_temperature.h  lastlog.h  load_average.h  memory.h  network.h  package_management.h  processes.h  swap.h  system_information.h  user_accounting_database.h
lib/src/: app_options.cpp  app_options_creator.cpp  boot_time.cpp  computer_information.cpp  external_network.cpp  file_system.cpp  fortune.cpp  general.cpp  hardware_information.cpp  http_request.cpp  http_secure_request.cpp  information_provider.cpp  lastlog.cpp  load_average.cpp  logging.cpp  mac_address.cpp  memory.cpp  network.cpp  package_management.cpp  posix_sysctl_information.cpp  posix_system_information.cpp  processes.cpp  swap.cpp  system.cpp  system_details.cpp  system_information.cpp  users_logged_in.cpp  weather_info.cpp
lib/src/platform/: hardware_information.cpp  hardware_temperature.cpp  system_information.cpp
output/: CMakeLists.txt
output/include/: output.h
output/src/: output.cpp
output/test/src/: test_output.cpp
test/: CMakeLists.txt
test/src/: main.cpp
view/: CMakeLists.txt
view/include/: active_network_interfaces.h  component.h  computer_boot_time.h  computer_information_provider.h  computer_information_provider_factory.h  computer_name.h  disk_usage.h  greeting.h  header.h  host_name.h  last_login.h  mediator.h  memory_usage.h  processes_count.h  processor_count.h  public_ip.h  random_quote.h  sub_header.h  swap_usage.h  system_load.h  unread_mail.h  users_count.h
view/src/: active_network_interfaces.cpp  component.cpp  computer_boot_time.cpp  computer_information_provider.cpp  computer_information_provider_factory.cpp  computer_name.cpp  disk_usage.cpp  greeting.cpp  header.cpp  host_name.cpp  last_login.cpp  mediator.cpp  memory_usage.cpp  processes_count.cpp  processor_count.cpp  public_ip.cpp  random_quote.cpp  sub_header.cpp  swap_usage.cpp  system_load.cpp  unread_mail.cpp  users_count.cpp
(+65 files in other folders)
